# switchboard

./: .babelrc  .dockerignore  .editorconfig  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .npmignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  cliff.toml  gulpfile.js  jest.config.js  jest.config.json  package-lock.json  package.json  release-plz.toml  switchboard.yaml  tsconfig.json  webpack.config.js
.cargo-husky/hooks/: pre-commit
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
example/: full.yaml  routing.yaml  switchboard.json  switchboard.toml  switchboard.yaml
scripts/: add-shebang.js  update-manifest.js
src/: cli.rs  error.rs  health.rs  index.ts  lib.rs  logging.rs  main.rs  sentry_integration.rs  server.rs
src/actuator/: configprops.rs  env.rs  health.rs  info.rs  loggers.rs  mappings.rs  metrics.rs  mod.rs
src/assets/: manifest.json
src/cli/: config.interface.ts  config.ts  index.ts  main.interface.ts  main.ts  program.ts
src/cli/__tests__/: main.test.ts  program.test.ts
src/cli/__tests__/__snapshots__/: main.test.ts.snap
src/cmd/: health.rs  init.rs  mod.rs  run.rs  validate.rs
src/cmd/init/: interactive.rs  mod.rs  serialize.rs  template.rs
src/config/: mod.rs  model.rs  validation.rs
src/config/sources/: dynamodb.rs  file_source.rs  json.rs  mod.rs  mongodb_source.rs  postgres.rs  redis_source.rs  sqlite.rs  toml_source.rs  yaml.rs
src/fonts/: standard.ts
src/fonts/__tests__/: standard.test.ts
src/fonts/__tests__/__snapshots__/: standard.test.ts.snap
src/interfaces/: main.interface.ts
src/middleware/: mod.rs
src/proxy/: fanout.rs  headers.rs  mod.rs  routing.rs
src/rest/: application.ts  server.ts
src/types/figlet/: index.d.ts
src/util/: echo.ts  error-handler.ts  execution-time.ts  font.ts  network.ts  package-json.ts  signal-handler.ts  tty.ts
src/util/__tests__/: execution-time.test.ts  font.test.ts  package-json.test.ts  signal-handler.test.ts
src/util/__tests__/__snapshots__/: font.test.ts.snap
tests/: actuator.rs  config_loading.rs  routing.rs  server.rs
